--- a/packages/component-rips/liquid-text/index.html
+++ b/packages/component-rips/liquid-text/index.html
@@ -18,10 +18,9 @@
         </header>
         <div class="display">
           <h2 id="liquidHeading" aria-live="polite">ERRL<span>&nbsp;</span>PORTAL</h2>
-          <p class="subtitle">Experimental typography playground</p>
         </div>
         <div class="controls">
-          <label>
+          <label class="text-input">
             Text
             <input id="textInput" type="text" maxlength="32" value="ERRL PORTAL" autocomplete="off" />
           </label>
