--- a/packages/component-rips/silhouette-inversion/index.html
+++ b/packages/component-rips/silhouette-inversion/index.html
@@ -15,7 +15,7 @@
         <span>Toggle Inversion:</span>
         <button id="toggle" type="button">Press Space or Click</button>
       </label>
-      <p class="note">Stare at the image for ~10 seconds, then toggle to see the inversion effect.</p>
+      <p class="note" style="color: rgba(255, 200, 100, 0.8);">⚠️ This component is deprecated. Functionality not working as expected.</p>
     </div>
     <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
