--- a/packages/component-rips/spectral-harp-membrane/index.html
+++ b/packages/component-rips/spectral-harp-membrane/index.html
@@ -12,6 +12,8 @@
     </div>
     <div class="controls" id="controls">
       <button id="mic" type="button">Enable Microphone</button>
+      <button id="trigger" type="button">Trigger Wave</button>
+      <button id="reset" type="button">Reset Grid</button>
       <span class="hint">or swipe across the grid</span>
     </div>
     <script src="../../_shared/preview-mode.js"></script>
