--- a/packages/component-rips/webcam-effects/index.html
+++ b/packages/component-rips/webcam-effects/index.html
@@ -25,6 +25,12 @@
               <option value="rgb">RGB Split</option>
               <option value="glitch">Glitch Trails</option>
               <option value="mono">Monochrome Bloom</option>
+              <option value="fisheye">Fisheye</option>
+              <option value="kaleidoscope">Kaleidoscope</option>
+              <option value="mirror">Mirror Flip</option>
+              <option value="pinch">Pinch Distortion</option>
+              <option value="tunnel">Tunnel Vision</option>
+              <option value="wave">Wave Distortion</option>
             </select>
             <button id="snapshot">Capture Frame</button>
           </div>
