--- a/packages/component-rips/rainbow-trailing-orbs-cursor/index.html
+++ b/packages/component-rips/rainbow-trailing-orbs-cursor/index.html
@@ -23,6 +23,10 @@
         <span>Size:</span>
         <input id="size" type="range" min="2" max="20" step="1" value="8" />
       </label>
+      <label>
+        <span>Speed:</span>
+        <input id="speed" type="range" min="0.1" max="2" step="0.05" value="0.5" />
+      </label>
     </div>
     <script src="../../_shared/preview-mode.js"></script>
     <script src="./script.js"></script>
