--- a/src/apps/static/pages/pin-designer/index.html
+++ b/src/apps/static/pages/pin-designer/index.html
@@ -21,8 +21,18 @@ body{font-family:Inter,system-ui,sans-serif; background:#0a0f18; color:var(--ink
   .errl-home-btn{ width:38px; height:38px; padding:0; border-radius:999px; display:inline-grid; place-items:center; overflow:hidden; font-size:0; }
   .errl-home-btn::before{ content:'←'; font-size:16px; line-height:1; filter: drop-shadow(0 1px 2px rgba(0,0,0,.8)); }
 }
-.errl-nav{ display:flex; gap:.5rem; align-items:center; }
-.errl-bubble-btn{ position:relative; display:inline-flex; align-items:center; justify-content:center; min-width:6.5rem; max-width:10rem; padding:.6rem .9rem .7rem; border-radius:999px; font-size:.8rem; font-weight:600; line-height:1.1; text-align:center; color:#e8e8e8; text-decoration:none; white-space:nowrap; text-shadow:0 1px 3px rgba(0,0,0,0.8); background: linear-gradient(135deg, rgba(100,100,120,0.9) 0%, rgba(60,60,80,0.9) 25%, rgba(40,40,60,0.9) 50%, rgba(60,60,80,0.9) 75%, rgba(100,100,120,0.9) 100%), linear-gradient(45deg, rgba(255,255,255,0.1) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.1) 100%); border:2px solid transparent; background-clip:padding-box; box-shadow: 0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.2) inset, 0 -1px 0 rgba(0,0,0,0.3) inset; }
+.errl-nav{ display:flex; gap:.5rem; align-items:center; flex-wrap:wrap; overflow-x:auto; scrollbar-width:none; -ms-overflow-style:none; }
+.errl-nav::-webkit-scrollbar{ display:none; }
+.errl-bubble-btn{ position:relative; display:inline-flex; align-items:center; justify-content:center; min-width:6.5rem; max-width:10rem; padding:.6rem .9rem .7rem; border-radius:999px; font-size:.8rem; font-weight:600; line-height:1.1; text-align:center; color:#e8e8e8; text-decoration:none; white-space:nowrap; text-shadow:0 1px 3px rgba(0,0,0,0.8); background: linear-gradient(135deg, rgba(100,100,120,0.9) 0%, rgba(60,60,80,0.9) 25%, rgba(40,40,60,0.9) 50%, rgba(60,60,80,0.9) 75%, rgba(100,100,120,0.9) 100%), linear-gradient(45deg, rgba(255,255,255,0.1) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.1) 100%); border:2px solid transparent; background-clip:padding-box; box-shadow: 0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.2) inset, 0 -1px 0 rgba(0,0,0,0.3) inset; flex-shrink:0; }
+@media (max-width: 900px){
+  .errl-header-content{ flex-wrap:wrap; gap:.75rem; }
+  .errl-nav{ gap:.4rem; max-width:100%; }
+  .errl-bubble-btn{ min-width:5.5rem; max-width:8rem; padding:.5rem .75rem .6rem; font-size:.75rem; }
+}
+@media (max-width: 640px){
+  .errl-nav{ gap:.3rem; }
+  .errl-bubble-btn{ min-width:4.5rem; max-width:7rem; padding:.45rem .65rem .55rem; font-size:.7rem; }
+}
 .errl-bubble-btn::before{ content:""; position:absolute; inset:-2px; border-radius:999px; padding:2px; background: linear-gradient(90deg, rgba(0,255,255,0.6) 0%, rgba(255,0,255,0.6) 25%, rgba(255,255,0,0.6) 50%, rgba(0,255,0,0.6) 75%, rgba(0,255,255,0.6) 100%); background-size:200% 100%; mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); mask-composite:xor; -webkit-mask-composite:xor; animation: led-flow 2s linear infinite; opacity:.7; }
 @keyframes led-flow{ 0%{background-position:0% 50%} 100%{background-position:200% 50%} }
 .errl-bubble-btn.active{ background: linear-gradient(135deg, rgba(140,140,160,0.95) 0%, rgba(100,100,130,0.95) 25%, rgba(80,80,110,0.95) 50%, rgba(100,100,130,0.95) 75%, rgba(140,140,160,0.95) 100%), linear-gradient(45deg, rgba(255,255,255,0.2) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.2) 100%); color:#fff; font-weight:700; text-shadow:0 1px 3px rgba(0,0,0,0.9); box-shadow: 0 6px 16px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.3) inset, 0 -1px 0 rgba(0,0,0,0.4) inset; }
@@ -35,11 +45,22 @@ body{font-family:Inter,system-ui,sans-serif; background:#0a0f18; color:var(--ink
   radial-gradient(80% 60% at 50% 35%, rgba(123,92,255,.18), rgba(123,92,255,0) 60%),
   radial-gradient(120% 100% at 50% 120%, rgba(0,229,255,.10), rgba(0,229,255,0) 60%),
   linear-gradient(180deg, #0f1326, #0a0f18 60%);
+  min-height: 0;
+  overflow: hidden;
 }
-.box .frame iframe{ width:100%; height:100%; border:0; background:transparent; }
+.box .frame iframe{ width:100%; height:100%; border:0; background:transparent; min-height: 500px; }
 @media (max-width: 900px){ 
-  .box{ margin: 16px 20px 20px; min-height: 70vh; }
+  .box{ margin: 16px 20px 20px; min-height: 70vh; max-width: 100%; }
+  .box .frame{ min-height: 60vh; }
+  .box .frame iframe{ min-height: 60vh; width: 100%; height: 100%; }
   :root{ --outer-pad:20px; }
+}
+@media (max-width: 640px){
+  .box{ margin: 12px 16px 16px; min-height: 65vh; }
+  .box header{ padding: 8px 16px; font-size: 0.9rem; }
+  .box .frame{ min-height: 55vh; }
+  .box .frame iframe{ min-height: 55vh; }
+  :root{ --outer-pad:16px; }
 }
 </style>
 <link rel="stylesheet" href="../../../../fx/errl-bg.css">
@@ -68,6 +89,13 @@ body{font-family:Inter,system-ui,sans-serif; background:#0a0f18; color:var(--ink
     </div>
   </article>
 <script type="module">
+  // Hide header when embedded in iframe (e.g., in React Studio shell)
+  if (window.self !== window.top) {
+    const header = document.querySelector('.errl-header');
+    if (header) {
+      header.style.display = 'none';
+    }
+  }
   // Simple URL resolver for portal pages - same in dev and production
   function resolvePortalUrl(pagePath) {
     let clean = pagePath.replace(/^pages\//, '');
