--- a/src/apps/static/pages/merch/index.html
+++ b/src/apps/static/pages/merch/index.html
@@ -29,7 +29,8 @@
 
     /* ===== HEADER SHELL ===== */
     .errl-header { position: sticky; top: 0; width: 100%; background: linear-gradient(135deg, rgba(220,220,240,0.95) 0%, rgba(180,180,200,0.9) 25%, rgba(160,160,180,0.9) 50%, rgba(180,180,200,0.9) 75%, rgba(220,220,240,0.95) 100%), linear-gradient(45deg, rgba(255,255,255,0.3) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.3) 100%); box-shadow: 0 8px 32px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.4) inset, 0 -1px 0 rgba(0,0,0,0.2) inset; border-bottom: 1px solid rgba(120,120,140,0.6); padding: 0.75rem 1rem; z-index: 999; letter-spacing: -0.03em; }
-    .errl-nav { max-width: 75rem; margin: 0 auto; display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; row-gap: 0.75rem; }
+    .errl-nav { max-width: 75rem; margin: 0 auto; display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; row-gap: 0.75rem; overflow-x: auto; scrollbar-width: none; -ms-overflow-style: none; }
+    .errl-nav::-webkit-scrollbar { display: none; }
     .errl-home-btn { display: inline-flex; align-items: center; gap: 0.5rem; color: #fff; background: linear-gradient(135deg, #ff0080 0%, #8000ff 25%, #0080ff 50%, #00ff80 75%, #ff8000 100%); background-size: 200% 200%; border: 1px solid rgba(255,255,255,0.3); border-radius: 999px; font-size: 0.8rem; font-weight: 600; line-height: 1; padding: 0.55rem 0.9rem 0.6rem; box-shadow: 0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.3) inset; text-decoration: none; position: relative; text-shadow: 0 1px 2px rgba(0,0,0,0.8); animation: rainbow-flow 3s linear infinite; }
     @keyframes rainbow-flow { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
     @media (max-width: 640px) {
@@ -71,7 +72,7 @@
         <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
         <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
         <a class="errl-bubble-btn" href="/studio.html">Studio</a>
-        <a class="errl-bubble-btn" href="/studio/pin-designer">Design</a>
+        <a class="errl-bubble-btn" href="#" data-multitool-link>Multitool</a>
         <a class="errl-bubble-btn" href="/events/" data-portal-link="events/">Events</a>
         <a class="errl-bubble-btn active" href="/merch/" data-portal-link="merch/">Merch</a>
       </nav>
@@ -89,6 +90,13 @@
       <p>Merchandise store will be available here soon.</p>
     </section>
   </main>
+  <script>
+    // Resolve Multitool links - use localhost in dev, relative path in production
+    document.querySelectorAll("[data-multitool-link]").forEach((el) => {
+      const isDev = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
+      el.setAttribute("href", isDev ? "http://localhost:5174" : "/multitool/");
+    });
+  </script>
 </body>
 </html>
 
