Fix Color Customizer and Pin Widget iframe paths on assets page
- Changed iframe src paths from relative (../studio/...) to absolute (/studio/...)
- Enhanced vite rewrite plugin to explicitly exclude /svg-colorer/ and /pin-widget/ paths
- Ensures HTML files load correctly instead of being intercepted by React Studio rewrite

--- a/src/apps/static/pages/assets/index.html
+++ b/src/apps/static/pages/assets/index.html
@@ -85,8 +85,8 @@ const assets = [
   { title: 'Errl Head Coin v4', src: './errl-head-coin-v4/index.html', download: './errl-head-coin-v4/index.html', filename: 'Errl_Head_Coin_V4.html' },
   { title: 'Errl Face Popout', src: './errl-face-popout/index.html', download: './errl-face-popout/index.html', filename: 'Errl_Face_Popout.html' },
   { title: 'Walking Errl (Animated SVG)', src: './walking-errl/index.html', download: './walking-errl/index.html', filename: 'Walking_Errl_Animated_SVG.html' },
-  { title: 'Color Customizer', src: '../studio/svg-colorer/index.html', download: '../studio/svg-colorer/index.html', filename: 'Errl_Color_Customizer.html' },
-  { title: 'Pin Widget', src: '../studio/pin-widget/ErrlPin.Widget/designer.html', download: '../studio/pin-widget/ErrlPin.Widget/designer.html', filename: 'Errl_Pin_Widget.html' },
+  { title: 'Color Customizer', src: '/studio/svg-colorer/index.html', download: '/studio/svg-colorer/index.html', filename: 'Errl_Color_Customizer.html' },
+  { title: 'Pin Widget', src: '/studio/pin-widget/ErrlPin.Widget/designer.html', download: '/studio/pin-widget/ErrlPin.Widget/designer.html', filename: 'Errl_Pin_Widget.html' },
 ];
 // Escape HTML to prevent XSS
 function escapeHtml(text) {
