--- a/src/apps/static/pages/pin-designer/pin-designer.html
+++ b/src/apps/static/pages/pin-designer/pin-designer.html
@@ -423,7 +423,7 @@
       <a class="errl-bubble-btn" href="/about/" data-portal-link="about/">About Errl</a>
       <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
       <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
-      <a class="errl-bubble-btn active" href="/pin-designer/" data-portal-link="pin-designer/">Design</a>
+      <a class="errl-bubble-btn active" href="#" data-multitool-link>Design</a>
       <a class="errl-bubble-btn" href="/studio.html">Studio</a>
       <a class="errl-bubble-btn" href="/events/" data-portal-link="events/">Events</a>
       <a class="errl-bubble-btn" href="/merch/" data-portal-link="merch/">Merch</a>
@@ -1668,5 +1668,11 @@ window.addEventListener('DOMContentLoaded',()=>{
       const url = resolvePortalUrl(target);
       el.setAttribute('href', url);
     }
+  });
+  
+  // Resolve Multitool links - use localhost in dev, relative path in production
+  document.querySelectorAll("[data-multitool-link]").forEach((el) => {
+    const isDev = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
+    el.setAttribute("href", isDev ? "http://localhost:5174" : "/multitool/");
   });
 </script>
